add boilerplate html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+    <section class="hero">
+        <div class="hero-body">
+          <div class="container has-text-centered">
+            <h1 class="title is-spaced">Hot Restaurant</h1>
+            <h2 class="subtitle">We only have 5 table! Book your seat before they are all gone.</h2>
+            <div class="buttons is-centered"><a class="control button is-primary" href="#">View Tables</a><a class="control button is-light" href="#">Make Reservation</a></div>
+          </div>
+        </div>
+        
+      </section>
+      <div class="tags are-normal is-centered">
+        <span class="tag is-link">API link</span>
+        <span class="tag is-link">API link</span>
+    </div>
     
 </body>
 </html>
