--- a/app/public/reserve.html
+++ b/app/public/reserve.html
@@ -8,8 +8,50 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma-rtl.min.css">
 
 </head>
+    <body>
+        <section class="hero">
+            <div class="hero-body">
+              <div class="container has-text-centered">
+                <h1 class="title is-spaced">Hot Restaurant</h1>
+                <h2 class="subtitle">Make your Reservation</h2>
+                <div class="buttons is-centered"><a class="control button is-primary" href="#">View Tables</a><a class="control button is-light" href="#">Home</a></div>
+              </div>
+            </div>
+          </section>
 
-<body>
+        <section>
+           <h1>Table reservation</h1>
+           <div class="field">
+            <label class="label" for="">Label for text</label>
+            <div class="control">
+              <input class="input" type="text" name="field-name" placeholder="Write a text">
+            </div>
+            <label class="label" for="">Label for text</label>
+            <div class="control">
+              <input class="input" type="text" name="field-name" placeholder="Write a text">
+            </div>
+            <label class="label" for="">Label for text</label>
+            <div class="control">
+              <input class="input" type="text" name="field-name" placeholder="Write a text">
+            </div>
+            <label class="label" for="">Label for text</label>
+            <div class="control">
+              <input class="input" type="text" name="field-name" placeholder="Write a text">
+            </div>
+            <div class="control">
+              <input class="input" type="text" name="field-name" placeholder="Write a text">
+            </div>
+            <div class="control">
+                <input class="input" type="text" name="field-name" placeholder="Write a text">
+            </div>
+            <button class="button is-primary is-centered">Sign in!</button>
+          </div>
+          
+        </section>
+        <div class="tags are-normal is-centered">
+            <span class="tag is-link">API link</span>
+            <span class="tag is-link">API link</span>
+        </div>
+    </body>
     
-</body>
 </html>
