--- a/app/public/tables.html
+++ b/app/public/tables.html
@@ -10,6 +10,36 @@
 </head>
 
 <body>
-    
+    <body>
+        <section class="hero">
+            <div class="hero-body">
+              <div class="container has-text-centered">
+                <h1 class="title is-spaced">Hot Restaurant</h1>
+                <h2 class="subtitle">Current Reservation and Waiting List</h2>
+                <div class="buttons is-centered"><a class="control button is-primary" href="#">Make Reservation</a><a class="control button is-light" href="#">Home</a></div>
+              </div>
+            </div>
+            
+          </section>
+        <section>
+            <div class="container">
+                <h3 class="title">Current Reservations</h3>
+                <div class="something">
+                    <ul id="tableList"></ul>
+                </div>
+           </div>
+           <div class="container">
+            <h3 class="title">Waiting List</h3>
+            <div class="something">
+                <ul id="waitingList"></ul>
+            </div>
+       </div>    
+        </section>
+          <div class="tags are-normal is-centered">
+              <span class="tag is-link">API link</span>
+              <span class="tag is-link">API link</span>
+              <span class="tag is-link">API link</span>
+          </div>
+    </body>
 </body>
 </html>
